# tentley

./: Cargo.toml  README.md
examples/: augmented.rs
src/: error.rs  lib.rs  scalar.rs  scalar_traits.rs
src/linalg/: lu.rs  mod.rs  qr.rs
src/matrix/: access.rs  augmented.rs  basic.rs  constructors.rs  gaussian.rs  iter.rs  mod.rs  ops.rs  random.rs  square.rs
tentley_macros/: Cargo.toml
tentley_macros/src/: lib.rs
tentley_tests/: Cargo.toml
tentley_tests/src/: lib.rs
tentley_tests/tests/: access.rs  augmented.rs  constructors.rs  gaussian.rs  macros.rs  map_and_filter.rs  square.rs
tests/: augmented.rs  gaussian.rs  lu.rs  macros.rs  ops.rs  square.rs
