[package]
name = "tentley"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tentley_macros = { path = "tentley_macros" }
fastrand = { version = "1.8.0", optional = true }
num-traits = "0.2.15"

[features]
full = ["random"]
default = []
random = ["dep:fastrand"]