[package]
name = "tentley"
version = "0.1.0"
edition = "2021"
authors = ["Hazel Rella <hazelrella11@gmail.com>"]
description = "A toy linear algebra library, surely it is not useful."
readme = "README.md"
repository = "https://github.com/HazelTheWitch/tentley"
license = "MIT"
keywords = ["mathematics", "linear_algebra"]
categories = ["data-structures", "mathematics"]

[dependencies]
tentley_macros = { path = "tentley_macros" }
fastrand = { version = "1.8.0", optional = true }
num-traits = "0.2.15"

[features]
full = ["random"]
default = []
random = ["dep:fastrand"]